--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css\iconic\base.css">
 
     <!-- script
     ================================================== -->
@@ -174,7 +175,7 @@
     <!-- works
     ================================================== -->
 
-    <section id="works" class="s-works target-section">
+    <section id="portfolio" class="s-works target-section">
 
         <div class="row narrow section-intro has-bottom-sep">
             <div class="col-full">
@@ -185,91 +186,245 @@
                                     -NF</p>
             </div>
         </div>
+        <div class="row portfolio-content">
 
-        <div class="row masonry-wrap">
-            <div class="masonry">
+    <div class="col-twelve">
 
-                <div class="masonry__brick">
-                    <div class="item-folio">
+      <!-- portfolio-wrapper -->
+         <div id="folio-wrapper" class="block-1-2 block-mob-full stack">
 
-                        <div class="item-folio__thumb">
-                            <img src="images\portfolio\gallery\cap-front.jpg" alt="dentiti baseball cap" class="lazyload">
-                        </div>
+          <div class="bgrid folio-item">
+               <div class="item-wrap">
+                <img src="images\portfolio\gallery\cap-front.jpg" alt="dentiti baseball cap" class="lazyload">
+                  <a href="#modal-01" class="overlay">
+                     <div class="folio-item-table">
+                      <div class="folio-item-cell">
+                       <h3 class="folio-title">D3ntiti</h3>
+                       <span class="folio-types">
+                          Brand Identity, Apparel and Marketing Design
+                       </span>
+                   </div>
+                     </div>
+                  </a>
+               </div>
+            </div> <!-- /folio-item -->
 
-                        <div class="item-folio__text">
-                            <h3 class="item-folio__title">
-                                D3ntiti
-                            </h3>
-                            <p class="item-folio__cat">
-                                Brand Identity, Apparel and Marketing Design
-                            </p>
-                        </div>
+            <div class="bgrid folio-item">
+               <div class="item-wrap">
+                <img src="images/portfolio/shutterbug.jpg" alt="Shutterbug">
+                <a href="#modal-02" class="overlay">
+                     <div class="folio-item-table">
+                      <div class="folio-item-cell">
+                        <h3 class="folio-title">Shutterbug</h3>
+                      <span class="folio-types">
+                          Web Design
+                      </span>
+                   </div>
+                     </div>
+                  </a>
+               </div>
+            </div> <!-- /folio-item -->
 
-                        <a href="#0" class="item-folio__project-link" title="Project link">
-                            <i class="im im-link"></i>
-                        </a>
+            <div class="bgrid folio-item">
+               <div class="item-wrap">
+                <img src="images/portfolio/clouds.jpg"alt="Clouds">
+                  <a href="#modal-03" class="overlay">
+                     <div class="folio-item-table">
+                      <div class="folio-item-cell">
+                        <h3 class="folio-title">Clouds</h3>
+                      <span class="folio-types">
+                          Web Design
+                      </span>
+                   </div>
+                     </div>
+                  </a>
+               </div>
+            </div> <!-- /folio-item -->
 
+            <div class="bgrid folio-item">
+               <div class="item-wrap">
+                <img src="images\portfolio\gallery\Taruwa Festival 2019.jpg" alt="Beetle">
+                  <a href="#modal-04" class="overlay">
+                     <div class="folio-item-table">
+                      <div class="folio-item-cell">
+                        <h3 class="folio-title">Beetle</h3>
+                      <span class="folio-types">
+                          Branding
+                      </span>
+                   </div>
+                     </div>
+                  </a>
+               </div>
+            </div> <!-- /folio-item -->
 
-                    </div> <!-- end item-folio -->
-                </div> <!-- end masonry__brick -->
+            <div class="bgrid folio-item">
+               <div class="item-wrap">
+                <img src="images/portfolio/lighthouse.jpg" alt="Lighthouse">
+                  <a href="#modal-05" class="overlay">
+                     <div class="folio-item-table">
+                      <div class="folio-item-cell">
+                        <h3 class="folio-title">Lighthouse</h3>
+                      <span class="folio-types">
+                          Web Development
+                      </span>
+                   </div>
+                     </div>
+                  </a>
+               </div>
+            </div> <!-- /folio-item -->
 
-                <div class="masonry__brick">
-                    <div class="item-folio">
+            <div class="bgrid folio-item">
+               <div class="item-wrap">
+                <img src="images/portfolio/salad.jpg" alt="Salad">
+                  <a href="#modal-06" class="overlay">
+                     <div class="folio-item-table">
+                      <div class="folio-item-cell">
+                        <h3 class="folio-title">Salad</h3>
+                      <span class="folio-types">
+                          Branding
+                      </span>
+                   </div>
+                     </div>
+                  </a>
+               </div>
+            </div> <!-- /folio-item -->
 
-                        <div class="item-folio__thumb">
-                            <img src="images\portfolio\gallery\02-UX-DOJO-LOGO.png" alt="Lamborghini aventador coupe app ui design by dumebi iwuchukwu" class="lazyload">
-                        </div>
+            <!-- modal popups - begin
+            ============================================================= -->
+            <div id="modal-01" class="popup-modal slider mfp-hide">
 
-                        <div class="item-folio__text">
-                            <h3 class="item-folio__title">
-                          02 Academy<br>
-                          UX/UI Dojo
-                            </h3>
-                            <p class="item-folio__cat">
-                               Learning Community
-                            </p>
-                        </div>
-
-                        <a href="#0" class="item-folio__project-link" title="Project link">
-                            <i class="im im-link"></i>
-                        </a>
-
-
-                    </div> <!-- end item-folio -->
-                </div> <!-- end masonry__brick -->
-
-
-                <div class="masonry__brick">
-                    <div class="item-folio">
-
-                        <div class="item-folio__thumb">
-                          <img src="images\portfolio\gallery\Taruwa Festival 2019.jpg" alt="Taruwa Festival 2019 identity and communication design by Dumebi Iwuchukwu" class="lazyload">
-                        </div>
-
-                        <div class="item-folio__text">
-                            <h3 class="item-folio__title">
-                                Taruwa Festival 2019
-                            </h3>
-                            <p class="item-folio__cat">
-                               Identity & Communication Design
-                            </p>
-                        </div>
-
-                        <a href="#0" class="item-folio__project-link" title="Project link">
-                            <i class="im im-link"></i>
-                        </a>
-
-                    </div> <!-- end item-folio -->
-                </div> <!-- end masonry__brick -->
-
-
+            <div class="media">
+              <img src="images/portfolio/modals/m-liberty.jpg" alt="" />
             </div>
-        </div> <!-- end masonry -->
 
-    </section> <!-- end works -->
+           <div class="description-box">
+              <h4>Liberty</h4>
+              <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
 
+              <div class="categories">Web Development</div>
+           </div>
+
+             <div class="link-box">
+                <a href="http://www.behance.net">Details</a>
+              <a href="#" class="popup-modal-dismiss">Close</a>
+             </div>
+
+         </div> <!-- /modal-01 -->
+
+         <div id="modal-02" class="popup-modal slider mfp-hide">
+
+            <div class="media">
+              <img src="images/portfolio/modals/m-shutterbug.jpg" alt="" />
+            </div>
+
+           <div class="description-box">
+              <h4>Shutterbug</h4>
+              <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+
+              <div class="categories">Web Design</div>
+           </div>
+
+             <div class="link-box">
+                <a href="http://www.behance.net">Details</a>
+              <a href="#" class="popup-modal-dismiss">Close</a>
+             </div>
+
+         </div> <!-- /modal-02 -->
+
+         <div id="modal-03" class="popup-modal slider mfp-hide">
+
+            <div class="media">
+              <img src="images/portfolio/modals/m-clouds.jpg" alt="" />
+            </div>
+
+           <div class="description-box">
+              <h4>Clouds</h4>
+              <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+
+              <div class="categories">Web Design</div>
+           </div>
+
+             <div class="link-box">
+                <a href="http://www.behance.net">Details</a>
+              <a href="#" class="popup-modal-dismiss">Close</a>
+             </div>
+
+         </div> <!-- /modal-03 -->
+
+         <div id="modal-04" class="popup-modal slider mfp-hide">
+
+            <div class="media">
+              <img src="images/portfolio/modals/m-beetle.jpg" alt="" />
+            </div>
+
+           <div class="description-box">
+              <h4>Beetle</h4>
+              <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+
+              <div class="categories">Branding</div>
+           </div>
+
+             <div class="link-box">
+                <a href="http://www.behance.net">Details</a>
+              <a href="#" class="popup-modal-dismiss">Close</a>
+             </div>
+
+         </div> <!-- /modal-04 -->
+
+         <div id="modal-05" class="popup-modal slider mfp-hide">
+
+            <div class="media">
+              <img src="images/portfolio/modals/m-lighthouse.jpg" alt="" />
+            </div>
+
+           <div class="description-box">
+              <h4>Lighthouse</h4>
+              <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+
+              <div class="categories">Web Development</div>
+           </div>
+
+             <div class="link-box">
+                <a href="http://www.behance.net">Details</a>
+              <a href="#" class="popup-modal-dismiss">Close</a>
+             </div>
+
+         </div> <!-- /modal-05 -->
+
+         <div id="modal-06" class="popup-modal slider mfp-hide">
+
+            <div class="media">
+              <img src="images/portfolio/modals/m-salad.jpg" alt="" />
+            </div>
+
+           <div class="description-box">
+              <h4>Salad</h4>
+              <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+
+              <div class="categories">Branding</div>
+           </div>
+
+             <div class="link-box">
+                <a href="http://www.behance.net">Details</a>
+              <a href="#" class="popup-modal-dismiss">Close</a>
+             </div>
+
+         </div> <!-- /modal-06 -->
+
+
+         <!-- modal popups - end
+            ============================================================= -->
+
+         </div> <!-- /portfolio-wrapper -->
+
+    </div>  <!-- /twelve -->
+
+  </div> <!-- /portfolio-content -->
 
     </section>
+
+
+
     <section id="contact" class="s-contact target-section">
 
         <div class="overlay"></div>
