--- a/index.html
+++ b/index.html
@@ -247,9 +247,9 @@
                   <a href="#modal-04" class="overlay">
                      <div class="folio-item-table">
                       <div class="folio-item-cell">
-                        <h3 class="folio-title">Beetle</h3>
+                        <h3 class="folio-title">Taruwa Festival 2019</h3>
                       <span class="folio-types">
-                          Branding
+                          Identity & Communication Design
                       </span>
                    </div>
                      </div>
@@ -294,14 +294,14 @@
             <div id="modal-01" class="popup-modal slider mfp-hide">
 
             <div class="media">
-              <img src="images/portfolio/modals/m-liberty.jpg" alt="" />
+              <img src="images\portfolio\modals\cap-front-m.png" alt="" />
             </div>
 
            <div class="description-box">
-              <h4>Liberty</h4>
+              <h4>D3ntiti</h4>
               <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
 
-              <div class="categories">Web Development</div>
+              <div class="categories">Brand Identity, Apparel and Marketing Design</div>
            </div>
 
              <div class="link-box">
@@ -354,14 +354,14 @@
          <div id="modal-04" class="popup-modal slider mfp-hide">
 
             <div class="media">
-              <img src="images/portfolio/modals/m-beetle.jpg" alt="" />
+              <img src="images\portfolio\modals\Taruwa Festival 2019-m.jpg" alt="" />
             </div>
 
            <div class="description-box">
-              <h4>Beetle</h4>
+              <h4>Taruwa Festival 2019</h4>
               <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
 
-              <div class="categories">Branding</div>
+              <div class="categories">Identity & Communication Design</div>
            </div>
 
              <div class="link-box">
@@ -422,6 +422,8 @@
   </div> <!-- /portfolio-content -->
 
     </section>
+
+
 
 
 
