--- a/404.html
+++ b/404.html
@@ -210,7 +210,7 @@
            Page not found
          </h1>
         <h1 >
-        <a class="btn full-width " href="index.html">Back to homepage</a>
+        <a class="btn btn--primary btn--large " href="index.html">Back to homepage</a>
        <h1>
 
 
