--- a/index.html
+++ b/index.html
@@ -259,13 +259,13 @@
 
             <div class="bgrid folio-item">
                <div class="item-wrap">
-                <img src="images/portfolio/lighthouse.jpg" alt="Lighthouse">
+                <img src="images\portfolio\gallery\02-UX-DOJO-LOGO.png" alt="02 Academyy UX  learning community Logo">
                   <a href="#modal-05" class="overlay">
                      <div class="folio-item-table">
                       <div class="folio-item-cell">
-                        <h3 class="folio-title">Lighthouse</h3>
+                        <h3 class="folio-title">02 Academy <br> UX/UI Dojo</h3>
                       <span class="folio-types">
-                          Web Development
+                        Learning Community
                       </span>
                    </div>
                      </div>
@@ -374,14 +374,14 @@
          <div id="modal-05" class="popup-modal slider mfp-hide">
 
             <div class="media">
-              <img src="images/portfolio/modals/m-lighthouse.jpg" alt="" />
+              <img src="images\portfolio\modals\02-academy-ux-ui-dojo-logo-m.jpg" alt="" />
             </div>
 
            <div class="description-box">
-              <h4>Lighthouse</h4>
+              <h4>02 Academy <br> UX/UI Dojo</h4>
               <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
 
-              <div class="categories">Web Development</div>
+              <div class="categories">Learning Community</div>
            </div>
 
              <div class="link-box">
