--- a/index.html
+++ b/index.html
@@ -211,13 +211,13 @@
 
             <div class="bgrid folio-item">
                <div class="item-wrap">
-                <img src="images/portfolio/shutterbug.jpg" alt="Shutterbug">
+                <img src="images\portfolio\gallery\Dumebi-branding-logo.jpg" alt="Dumebi iwuchukwu personal brand logo">
                 <a href="#modal-02" class="overlay">
                      <div class="folio-item-table">
                       <div class="folio-item-cell">
-                        <h3 class="folio-title">Shutterbug</h3>
+                        <h3 class="folio-title">Dumebi</h3>
                       <span class="folio-types">
-                          Web Design
+                          Brand Identity and Web development
                       </span>
                    </div>
                      </div>
@@ -314,14 +314,14 @@
          <div id="modal-02" class="popup-modal slider mfp-hide">
 
             <div class="media">
-              <img src="images/portfolio/modals/m-shutterbug.jpg" alt="" />
+              <img src="images\portfolio\modals\Dumebi-branding-logo-m.jpg" alt="modal image for dumebi iwuchukwu brand identity" />
             </div>
 
            <div class="description-box">
-              <h4>Shutterbug</h4>
+              <h4>Dumebi</h4>
               <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
 
-              <div class="categories">Web Design</div>
+              <div class="categories">Brand Identity & Web Development</div>
            </div>
 
              <div class="link-box">
