--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="yandex-verification" content="33730aaf93aa663d" />
     <title>Dum3bi- Personal website of Dumebi Iwuchukwu Micheal</title>
     <meta name="description" content="Dumebi Iwuchukwu is a designer, strategist and educator. He is an Art Manager and Instructor (Art Direction) at Oxygen Academy Lagos.">
-    <meta name="theme-color" content="#f91e15"/>
+    <meta name="theme-color" content="#1f1f22"/>
 
   <link rel="canonical" href="https://www.dum3bi.com/">
   <meta property="og:site_name" content="Dumebi Iwuchukwu">
@@ -101,17 +101,20 @@
 
 
               <h1>
-                  Hi I'm Dumebi. <br>
-              Art Direction Instructor with a background in Medical Imaging.
+                Hi I'm Dumebi, <br>
+                Art Director &<br>
+                UX/UI Designer<br>
+                in Lagos, Nigeria<br>
               </h1>
 
                 <div class="home-content__buttons">
+                  <a href="#about" class="smoothscroll btn btn--stroke">
+                      More About Me
+                  </a>
                     <a href="#works" class="smoothscroll btn btn--stroke">
                         Latest Projects
                     </a>
-                    <a href="#about" class="smoothscroll btn btn--stroke">
-                        More About Me
-                    </a>
+
                 </div>
 
                 <div class="home-content__scroll">
@@ -152,20 +155,26 @@
             </div>
         </div>
 
-        <div class="row about-content">
+<div class="container">
+
+  <div class="col-six tab-full left">
+   <div>
+    <img src="images\about pic.jpg" alt="" /> </div>
+  </div>
+
+<div class="col-six tab-full right">
 
             <div>
-              <h3>I am an Art Director and Brand Strategist currently teaching Art Direction and Digital Product Design at <a href="https://02academylagos.com" target="_blank" rel="noopener">Oxygen Academy Lagos</a></h3>
+              <h3>I currently teach Art Direction and Digital Product Design at Oxygen Academy Lagos and I'm fascinated by fishes for two reasons; <br> (1) their eyes are always open, they are always studying and learning from their environment. <br> (2) They are always swimming, they don't give up no matter the current.  </h3>
 
                 <p>
-                  I love to create enjoyable experiences for people. My medical radiography background helps me approach projects like i would attend to a patient, diagnosing problems before proferring solutions.
-                  I love nuclear physics, talk a lot (among friends) and play lots of first-person shooter games. I also design (Brand Identity, UX/UI), code (Web apps) and ask a lot of questions.
+                  I love to create enabling experiences for people. My medical radiography background helps me approach projects with care, diagnosing problems before proferring solutions.
+                  My itireative design process starts with Empathy and Research, then Ideation, Prototyping and Testing with the goal of providing effective, efficient and satisfactory solutions.
                 </p>
                 <p>  I am a member of the <a href="https://www.interaction-design.org/?r=chukwudumebi-iwuchukwu" target="_blank" rel="noopener">Interaction Design Foundation</a>, the world’s largest UX Design learning community.</p>
             </div>
 
-
-
+</div>
 
 
 
@@ -227,13 +236,13 @@
 
             <div class="bgrid folio-item">
                <div class="item-wrap">
-                <img src="images/portfolio/clouds.jpg"alt="Clouds">
+                <img src="images\portfolio\gallery\selfie.jpg"alt="Dangote Pasta Pack ad">
                   <a href="#modal-03" class="overlay">
                      <div class="folio-item-table">
                       <div class="folio-item-cell">
-                        <h3 class="folio-title">Clouds</h3>
+                        <h3 class="folio-title">Dangote Flour</h3>
                       <span class="folio-types">
-                          Web Design
+                          Art Direction
                       </span>
                    </div>
                      </div>
@@ -275,13 +284,13 @@
 
             <div class="bgrid folio-item">
                <div class="item-wrap">
-                <img src="images/portfolio/salad.jpg" alt="Salad">
+                <img src="images\portfolio\gallery\Daily UI Challenge\Day 1\free.png" alt="image of a signup form for daily Ui challenge">
                   <a href="#modal-06" class="overlay">
                      <div class="folio-item-table">
                       <div class="folio-item-cell">
-                        <h3 class="folio-title">Salad</h3>
+                        <h3 class="folio-title">Daily UI Challenge</h3>
                       <span class="folio-types">
-                          Branding
+                        UX/UI Design
                       </span>
                    </div>
                      </div>
@@ -294,7 +303,7 @@
             <div id="modal-01" class="popup-modal slider mfp-hide">
 
             <div class="media">
-              <img src="images\portfolio\modals\cap-front-m.png" alt="" />
+              <img src="images\portfolio\modals\cap-front-m.jpg" alt="" />
             </div>
 
            <div class="description-box">
@@ -334,14 +343,14 @@
          <div id="modal-03" class="popup-modal slider mfp-hide">
 
             <div class="media">
-              <img src="images/portfolio/modals/m-clouds.jpg" alt="" />
+              <img src="images\portfolio\modals\dangote-selfie-m.jpg" alt="" />
             </div>
 
            <div class="description-box">
-              <h4>Clouds</h4>
+              <h4>Dangote Flour</h4>
               <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
 
-              <div class="categories">Web Design</div>
+              <div class="categories">Art Direction</div>
            </div>
 
              <div class="link-box">
@@ -398,10 +407,10 @@
             </div>
 
            <div class="description-box">
-              <h4>Salad</h4>
+              <h4>Daily UI Challenge</h4>
               <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
 
-              <div class="categories">Branding</div>
+              <div class="categories">UI/UX Design</div>
            </div>
 
              <div class="link-box">
