--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!--- basic page needs
     ================================================== -->
   <meta name="yandex-verification" content="33730aaf93aa663d" />
-    <title>Dum3bi- Personal website of Dumebi Iwuchukwu Micheal</title>
-    <meta name="description" content="Dumebi Iwuchukwu is a designer, strategist and educator. He is an Art Manager and Instructor (Art Direction) at Oxygen Academy Lagos.">
+    <title>Dum3bi- Portfolio website of Dumebi Iwuchukwu</title>
+    <meta name="description" content="Dumebi Iwuchukwu is an art director, and UX/UI designer based in Lagos Nigeria. He teaches art direction at Oxygen academy Lagos.">
     <meta name="theme-color" content="#1f1f22"/>
 
   <link rel="canonical" href="https://www.dum3bi.com/">
@@ -25,17 +25,17 @@
   <meta property="og:url" content="https://www.dum3bi.com/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Dum3bi- Personal website of Dumebi Iwuchukwu Micheal.">
-  <meta property="og:description" content="Dumebi is an Art Director, Brand Strategist and Developer based in Lagos in Nigeria, building brands at the speed of culture.">
+  <meta property="og:description" content="Dumebi Iwuchukwu is an art director, and UX/UI designer based in Lagos Nigeria. He teaches art direction at Oxygen academy Lagos">
   <meta property="og:image" content="https://www.dum3bi.com/images/logo.svg">
   <meta property="og:image:alt" content="Dumebi's logo">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Dumebi Iwuchukwu">
-  <meta name="twitter:description" content="Dumebi is an Art Director, Brand Strategist and Developer based in Lagos in Nigeria, building brands at the speed of culture.">
+  <meta name="twitter:description" content="Dumebi Iwuchukwu is an art director, and UX/UI designer based in Lagos Nigeria. He teaches art direction at Oxygen academy Lagos.">
   <meta name="twitter:image" content="https://www.dum3bi.com/images/logo.svg">
 
   <meta property="og:type" content="website">
 
-  <meta name="keywords" content="Dumebi Iwuchukwu,Dumebi Nnadirinwa Iwuchukwu, Chukwudumebi Iwuchukwu, Chukwudumebi Iwuchukwu Micheal, Art Manager, Art Director, Brand Strategist, Developer, Strategy, Digital Marketing Strategy, Email marketing, Online Advertising, Creative, Lagos, Ozubulu,  Nigeria">
+  <meta name="keywords" content="Dumebi Iwuchukwu,Dumebi Nnadirinwa Iwuchukwu, Chukwudumebi Iwuchukwu, Chukwudumebi Iwuchukwu Micheal, Art Manager, Art Director, Brand Strategist, Developer, Strategy, Digital Marketing Strategy, Email marketing, Online Advertising, UI/UX, UX/UI, design, HCI, Usability, Value proposition design, design thinking, Creative, Lagos, Ozubulu,  Nigeria">
     <meta name="author" content="Dumebi Iwuchukwu">
 
          <!-- mobile specific metas
@@ -284,7 +284,7 @@
 
             <div class="bgrid folio-item">
                <div class="item-wrap">
-                <img src="images\portfolio\gallery\Daily UI Challenge\Day 1\free.png" alt="image of a signup form for daily Ui challenge">
+                <img src="images\portfolio\gallery\Daily UI Challenge\Day 1\free.jpg" alt="image of a signup form for daily Ui challenge">
                   <a href="#modal-06" class="overlay">
                      <div class="folio-item-table">
                       <div class="folio-item-cell">
