--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
          <div id="modal-06" class="popup-modal slider mfp-hide">
 
             <div class="media">
-              <img src="images/portfolio/modals/m-salad.jpg" alt="" />
+              <img src="images\portfolio\modals\free-m.jpg" alt="image showing mockup of sign up page design for dumebi's daily ui challenge" />
             </div>
 
            <div class="description-box">
