remove behance links

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
            </div>
 
              <div class="link-box">
-                <a href="http://www.behance.net">Details</a>
+                <a href="#">Details</a>
               <a href="#" class="popup-modal-dismiss">Close</a>
              </div>
 
@@ -334,7 +334,7 @@
            </div>
 
              <div class="link-box">
-                <a href="http://www.behance.net">Details</a>
+                <a href="#">Details</a>
               <a href="#" class="popup-modal-dismiss">Close</a>
              </div>
 
@@ -354,7 +354,7 @@
            </div>
 
              <div class="link-box">
-                <a href="http://www.behance.net">Details</a>
+                <a href="#">Details</a>
               <a href="#" class="popup-modal-dismiss">Close</a>
              </div>
 
@@ -374,7 +374,7 @@
            </div>
 
              <div class="link-box">
-                <a href="http://www.behance.net">Details</a>
+                <a href="#">Details</a>
               <a href="#" class="popup-modal-dismiss">Close</a>
              </div>
 
@@ -394,7 +394,7 @@
            </div>
 
              <div class="link-box">
-                <a href="http://www.behance.net">Details</a>
+                <a href="#">Details</a>
               <a href="#" class="popup-modal-dismiss">Close</a>
              </div>
 
@@ -414,7 +414,7 @@
            </div>
 
              <div class="link-box">
-                <a href="http://www.behance.net">Details</a>
+                <a href="#">Details</a>
               <a href="#" class="popup-modal-dismiss">Close</a>
              </div>
 
