update logo links and copyright color

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <header class="s-header">
 
         <div class="header-logo">
-            <a class="site-logo" href="index.html"><img src="images/logo.svg" alt="Homepage"></a>
+            <a class="site-logo" href="#top"><img src="images/logo.svg" alt="Homepage"></a>
         </div>
 
         <nav class="header-nav-wrap">
