--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
   <div class="col-six tab-full left">
    <div>
-    <img src="images\about pic.jpg" alt="" /> </div>
+    <img src="images\about.jpg" alt="" /> </div>
   </div>
 
 <div class="col-six tab-full right">
