--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
-    <script src="lazysizes.min.js" async></script>
+    <script src="js/lazysizes.min.js" async></script>
 
 
 
