--- a/vernacular-design.html
+++ b/vernacular-design.html
@@ -6,15 +6,7 @@
 <!--<![endif]-->
 
 <head>
-  <!-- Google Adsense tags -->
 
-  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({
-          google_ad_client: "ca-pub-3584657889118246",
-          enable_page_level_ads: true
-     });
-</script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133301768-1"></script>
@@ -301,6 +293,7 @@
 
         <!-- Java Script
         ================================================== -->
+        <script data-ad-client="ca-pub-3584657889118246" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         <script src="js/jquery-3.2.1.min.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
