--- a/index.html
+++ b/index.html
@@ -155,11 +155,10 @@
             </div>
         </div>
 
-<div class="container">
+<div class="container about-content">
 
   <div class="col-six tab-full left">
-   <div>
-    <img src="images\about.jpg" alt="" /> </div>
+    <img src="images\about.jpg" alt="" />
   </div>
 
 <div class="col-six tab-full right">
