--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -20,7 +20,7 @@
     ================================================== -->
     <meta charset="utf-8">
      <title>Terms of Service - Personal website of Dumebi Iwuchukwu Micheal</title>
-     <meta name="theme-color" content="#f91e15"/>
+     <meta name="theme-color" content="##1f1f22"/>
 
    <link rel="canonical" href="https://www.dum3bi.com/">
    <meta property="og:site_name" content="Dumebi Iwuchukwu">
