add cookie policy

--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -98,7 +98,7 @@
 
         <!-- page header/blog hero
         ================================================== -->
-        <div class="page-header page-header--single page-hero" style="background-image:url(images\contact-bg.jpg)">
+      <div class="page-header page-header--single page-hero" style="background-image:url(images/cookie-policy.jpg)">
 
             <div class="row page-header__content narrow">
                 <article class="col-full">
