--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 
            <div class="description-box">
               <h4>D3ntiti</h4>
-              <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+              <p>A case study of the Brand Identity & Marketing strategy my team created for the Dentiti clothing brand.</p>
 
               <div class="categories">Brand Identity, Apparel and Marketing Design</div>
            </div>
@@ -328,7 +328,7 @@
 
            <div class="description-box">
               <h4>Dumebi</h4>
-              <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+              <p>Casestudy of my process in designing my personal brand identity and developing my personal porfolio website.</p>
 
               <div class="categories">Brand Identity & Web Development</div>
            </div>
