--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 
            <div class="description-box">
               <h4>Taruwa Festival 2019</h4>
-              <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+              <p>I worked with the team at Taruwa Festival 2019, designing the Festival identity as well as the communication materials for the festival.</p>
 
               <div class="categories">Identity & Communication Design</div>
            </div>
