--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 
            <div class="description-box">
               <h4>Dangote Flour</h4>
-              <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+              <p>Review of the designs i created as the art director on the team creating social media content for Dangote Flour's Social Media Account.</p>
 
               <div class="categories">Art Direction</div>
            </div>
@@ -388,7 +388,7 @@
 
            <div class="description-box">
               <h4>02 Academy <br> UX/UI Dojo</h4>
-              <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+              <p>I teach a weekly overnight class on UX & UI design for students and alumni of Oxygen Academy Lagos.</p>
 
               <div class="categories">Learning Community</div>
            </div>
@@ -408,7 +408,7 @@
 
            <div class="description-box">
               <h4>Daily UI Challenge</h4>
-              <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+              <p>Case study of my progress in the Daily UI Challenge.</p>
 
               <div class="categories">UI/UX Design</div>
            </div>
