--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <ul class="header-nav">
                 <li class="current"><a class="smoothscroll"  href="#home" title="home">Home</a></li>
                 <li><a class="smoothscroll"  href="#about" title="about">About</a></li>
-                <li><a class="smoothscroll"  href="#works" title="works">Works</a></li>
+                <li><a class="smoothscroll"  href="#portfolio" title="works">Works</a></li>
                 <li><a class="smoothscroll"  href="#contact" title="contact">Contact</a></li>
             </ul>
         </nav>
@@ -112,7 +112,7 @@
                   <a href="#about" class="smoothscroll btn btn--stroke">
                       More About Me
                   </a>
-                    <a href="#works" class="smoothscroll btn btn--stroke">
+                    <a href="#portfolio" class="smoothscroll btn btn--stroke">
                         Latest Projects
                     </a>
 
