updated meta tags

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <meta property="og:url" content="https://www.dum3bi.com/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Dum3bi- Personal website of Dumebi Iwuchukwu Micheal.">
+  <meta property="og:title" content="Dum3bi- Portfolio website of Dumebi Iwuchukwu.">
   <meta property="og:description" content="Dumebi Iwuchukwu is an art director, and UX/UI designer based in Lagos Nigeria. He teaches art direction at Oxygen academy Lagos">
   <meta property="og:image" content="https://www.dum3bi.com/images/logo.svg">
   <meta property="og:image:alt" content="Dumebi's logo">
