--- a/offline.html
+++ b/offline.html
@@ -131,7 +131,7 @@
                 <a href="https://twitter.com/dum3bi" target="_blank" rel="noopener"><i class="im im-twitter" aria-hidden="true"></i><span>Twitter</span></a>
             </li>
             <li>
-                <a href="https://instagram.com/dum3bi" target="_blank" rel="noopener"><i class="im im-instagram" aria-hidden="true"></i><span>Instagram</span></a>
+                <a href="https://instagram.com/dum3bi/" target="_blank" rel="noopener"><i class="im im-instagram" aria-hidden="true"></i><span>Instagram</span></a>
             </li>
             <li>
                 <a href="https://github.com/dum3bi" target="_blank" rel="noopener"><i class="im im-github" aria-hidden="true"></i><span>Github</span></a>
@@ -367,7 +367,7 @@
                         <i class="im im-twitter" aria-hidden="true"></i>
                         <span>Twitter</span>
                     </a></li>
-                    <li><a href="https://instagram.com/dum3bi" target="_blank" rel="noopener">
+                    <li><a href="https://instagram.com/dum3bi/" target="_blank" rel="noopener">
                         <i class="im im-instagram" aria-hidden="true"></i>
                         <span>Instagram</span>
                     </a></li>
