--- a/My-YALI-Story-2-enroute-to-ASCON.html
+++ b/My-YALI-Story-2-enroute-to-ASCON.html
@@ -216,7 +216,7 @@ Taking my elephant for a walk…
                         <i class="im im-twitter" aria-hidden="true"></i>
                         <span>Twitter</span>
                     </a></li>
-                    <li><a href="https://instagram.com/dum3bi" target="_blank" rel="noopener">
+                    <li><a href="https://instagram.com/dum3bi/" target="_blank" rel="noopener">
                         <i class="im im-instagram" aria-hidden="true"></i>
                         <span>Instagram</span>
                     </a></li>
