--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -177,7 +177,7 @@
                         <i class="im im-twitter" aria-hidden="true"></i>
                         <span>Twitter</span>
                     </a></li>
-                    <li><a href="https://instagram.com/dum3bi" target="_blank" rel="noopener">
+                    <li><a href="https://instagram.com/dum3bi/" target="_blank" rel="noopener">
                         <i class="im im-instagram" aria-hidden="true"></i>
                         <span>Instagram</span>
                     </a></li>
