--- a/d3ntiti-brand-identity-and-strategy-case-study.html
+++ b/d3ntiti-brand-identity-and-strategy-case-study.html
@@ -240,7 +240,7 @@ code {
                         <i class="im im-twitter" aria-hidden="true"></i>
                         <span>Twitter</span>
                     </a></li>
-                    <li><a href="https://instagram.com/dum3bi" target="_blank" rel="noopener">
+                    <li><a href="https://instagram.com/dum3bi/" target="_blank" rel="noopener">
                         <i class="im im-instagram" aria-hidden="true"></i>
                         <span>Instagram</span>
                     </a></li>
