--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
         <ul class="home-social">
             <li>
-                <a href="https://instagram.com/dum3bi" target="_blank" rel="noopener"><i class="im im-instagram" aria-hidden="true"></i><span>Instagram</span></a>
+                <a href="https://instagram.com/dum3bi/" target="_blank" rel="noopener"><i class="im im-instagram" aria-hidden="true"></i><span>Instagram</span></a>
             </li>
             <li>
                 <a href="https://github.com/dum3bi" target="_blank" rel="noopener"><i class="im im-github" aria-hidden="true"></i><span>Github</span></a>
@@ -513,7 +513,7 @@
 
                 <ul class="footer-social">
 
-                    <li><a href="https://instagram.com/dum3bi" target="_blank" rel="noopener">
+                    <li><a href="https://instagram.com/dum3bi/" target="_blank" rel="noopener">
                         <i class="im im-instagram" aria-hidden="true"></i>
                         <span>Instagram</span>
                     </a></li>
