--- a/index.html
+++ b/index.html
@@ -165,10 +165,10 @@
 <div class="col-six tab-full right">
 
             <div>
-              <h3>I currently teach Art Direction and Digital Product Design at Oxygen Academy Lagos and I'm fascinated by fishes for two reasons; <br> (1) their eyes are always open, they are always studying and learning from their environment. <br> (2) They are always swimming, they don't give up no matter the current.  </h3>
+              <h3>I love to create enabling experiences for people.  </h3>
 
                 <p>
-                  I love to create enabling experiences for people. My medical radiography background helps me approach projects with care, diagnosing problems before proferring solutions.
+                  My medical radiography background helps me approach projects with care, diagnosing problems before proferring solutions.
                   My itireative design process starts with Empathy and Research, then Ideation, Prototyping and Testing with the goal of providing effective, efficient and satisfactory solutions.
                 </p>
                 <p>  I am a member of the <a href="https://www.interaction-design.org/?r=chukwudumebi-iwuchukwu" target="_blank" rel="noopener">Interaction Design Foundation</a>, the world’s largest UX Design learning community.</p>
