swap Lagos UI Dojo

--- a/index.html
+++ b/index.html
@@ -268,11 +268,11 @@
 
             <div class="bgrid folio-item">
                <div class="item-wrap">
-                <img src="images\portfolio\gallery\02-UX-DOJO-LOGO.png" alt="02 Academyy UX  learning community Logo">
+                <img src="images/portfolio/gallery/LAGOS-UX-DOJO-LOGO.png" alt="Lagos UX learning community Logo">
                   <a href="#modal-05" class="overlay">
                      <div class="folio-item-table">
                       <div class="folio-item-cell">
-                        <h3 class="folio-title">02 Academy <br> UX/UI Dojo</h3>
+                        <h3 class="folio-title">Lagos<br> UX/UI Dojo</h3>
                       <span class="folio-types">
                         Learning Community
                       </span>
@@ -383,12 +383,12 @@
          <div id="modal-05" class="popup-modal slider mfp-hide">
 
             <div class="media">
-              <img src="images\portfolio\modals\02-academy-ux-ui-dojo-logo-m.jpg" alt="" />
+              <img src="images/portfolio/modals/LAGOS--ux-ui-dojo-logo-m.png" alt="" />
             </div>
 
            <div class="description-box">
-              <h4>02 Academy <br> UX/UI Dojo</h4>
-              <p>I teach a weekly overnight class on UX & UI design for students and alumni of Oxygen Academy Lagos.</p>
+              <h4>Lagos <br>UX/UI Dojo</h4>
+              <p>I teach a weekly overnight class on UX & UI design.</p>
 
               <div class="categories">Learning Community</div>
            </div>
