--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
                 <p>
                   My medical radiography background helps me approach projects with care, diagnosing problems before proferring solutions.
-                  My itireative design process starts with Empathy and Research, then Ideation, Prototyping and Testing with the goal of providing effective, efficient and satisfactory solutions.
+                  My iterative design process starts with Empathy and Research, then Ideation, Prototyping and Testing with the goal of providing effective, efficient and satisfactory solutions.
                 </p>
                 <p>  I am a member of the <a href="https://www.interaction-design.org/?r=chukwudumebi-iwuchukwu" target="_blank" rel="noopener">Interaction Design Foundation</a>, the world’s largest UX Design learning community.</p>
             </div>
