--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 <div class="col-six tab-full right">
 
             <div>
-              <h3>I love to create enabling experiences for people.  </h3>
+              <h3>I design enabling experiences for people.  </h3>
 
                 <p>
                   My medical radiography background helps me approach projects with care, diagnosing problems before proferring solutions.
