--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
               <h3>I design enabling experiences for people.  </h3>
 
                 <p>
-                  My medical radiography background helps me approach projects with care, diagnosing problems before proferring solutions.
-                  My iterative design process starts with Empathy and Research, then Ideation, Prototyping and Testing with the goal of providing effective, efficient and satisfactory solutions.
+                  My medical radiography background helps me approach projects with care, understanding problems before proferring solutions.
+                  My iterative design process starts with empathy and research, then ideation, prototyping (visual design and/or coding) and testing with the goal of providing effective, efficient and satisfactory solutions.
                 </p>
                 <p>  I am a member of the <a href="https://www.interaction-design.org/?r=chukwudumebi-iwuchukwu" target="_blank" rel="noopener">Interaction Design Foundation</a>, the world’s largest UX Design learning community.</p>
             </div>
