--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <div class="col-full text-center">
                 <h3>About</h3>
                 <h1>Dumebi</h1>
-                <p class="lead">Art Director | UX/UI Designer | Web Developer</p>
+                <p class="lead">Art director | UX/UI designer | Front end developer</p>
             </div>
         </div>
 
