--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <div class="col-full text-center">
                 <h3>About</h3>
                 <h1>Dumebi</h1>
-                <p class="lead">Art director | UX/UI designer | Front end developer</p>
+                <p class="lead">Art director | UX/UI designer</p>
             </div>
         </div>
 
