--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               <h1>
                 Hi I'm Dumebi, <br>
                 Art Director &<br>
-                UX/UI Designer.<br>
+                UX Designer.<br>
               </h1>
 
                 <div class="home-content__buttons">
