--- a/index.html
+++ b/index.html
@@ -102,9 +102,11 @@
 
 
               <h1>
-                Hi I'm Dumebi, <br>
-                Art Director &<br>
-                UX Designer.<br>
+              Strategist,<br>
+              Designer,<br>
+              Teacher.<br>
+
+
               </h1>
 
                 <div class="home-content__buttons">
